# jowohub

./: .gitignore  README.md
Shorts/common/: CMakeLists.txt  build.gradle  proguard-rules.pro
Shorts/common/schemas/c.plus.plan.common.manager.CommonDataBase/: 1.json  2.json  3.json
Shorts/common/schemas/com.xijia.common.manager.CommonDataBase/: 1.json
Shorts/common/src/main/: AndroidManifest.xml
Shorts/common/src/main/cpp/: Constants.h  EncryptManager.cpp  EncryptManager.h  Md5.cpp  Md5.h  NativeManager.cpp  NativeManager.h  NativeUtils.cpp  NativeUtils.h  UrlManager.cpp  UrlManager.h  log.h
Shorts/common/src/main/java/c/plus/plan/common/: CommonActivity.java  CommonApplication.java  NativeManager.java
Shorts/common/src/main/java/c/plus/plan/common/adapter/: AttrBindingAdapter.java  DrawableBindingAdapter.java
Shorts/common/src/main/java/c/plus/plan/common/base/: BaseApplication.java  BaseDataBase.java
Shorts/common/src/main/java/c/plus/plan/common/constants/: Constants.java  KVConstants.java  RouterHub.java
Shorts/common/src/main/java/c/plus/plan/common/dao/: UserDao.java
Shorts/common/src/main/java/c/plus/plan/common/entity/: BaseHeader.java  Converters.java  Current.java  DataResult.java  PageResult.java  User.java
Shorts/common/src/main/java/c/plus/plan/common/event/: CloseAdEvent.java  LoginEvent.java  PayEvent.java  TokenEvent.java
Shorts/common/src/main/java/c/plus/plan/common/localCounter/: DayLocalCounterImpl.java  LocalCountImpl.java  LocalCounter.java
Shorts/common/src/main/java/c/plus/plan/common/lswitch/: DayLocalSwitchImpl.java  LocalSwitch.java  LocalSwitchImpl.java  MinuteLocationSwitchImpl.java
Shorts/common/src/main/java/c/plus/plan/common/manager/: CommonDataBase.java
Shorts/common/src/main/java/c/plus/plan/common/network/: ApiEncryptInterceptor.kt  ApiManager.java  FakeResponse.java  HttpUserService.java  NetworkStateManager.java  NetworkStateReceive.java
Shorts/common/src/main/java/c/plus/plan/common/service/: UserService.java
Shorts/common/src/main/moduleManifest/: AndroidManifest.xml
Shorts/common/src/main/res/drawable/: bg_bottom_list_dialog.xml  bg_left_btn.xml  bg_right_btn.xml  bg_text_dialog.xml
Shorts/common/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
Shorts/common/src/main/res/values-ar/: strings.xml
Shorts/common/src/main/res/values-de/: strings.xml
Shorts/common/src/main/res/values-en/: strings.xml
Shorts/common/src/main/res/values-es/: strings.xml
Shorts/common/src/main/res/values-fr/: strings.xml
Shorts/common/src/main/res/values-it/: strings.xml
Shorts/common/src/main/res/values-ja/: strings.xml
Shorts/common/src/main/res/values-ko/: strings.xml
Shorts/common/src/main/res/values-pt/: strings.xml
Shorts/common/src/main/res/values-ru/: strings.xml
Shorts/common/src/main/res/values-th/: strings.xml
Shorts/common/src/main/res/values-vi/: strings.xml
Shorts/common/src/main/res/values-zh-rCN/: strings.xml
Shorts/common/src/main/res/values-zh-rTW/: strings.xml
(+276 files in other folders)
